Fix mobile nav border on ios devices

--- a/src/resources/sass/layout/top/_navigation.scss
+++ b/src/resources/sass/layout/top/_navigation.scss
@@ -138,7 +138,7 @@
             &--has-children {
                 & > a {
                     border-right: none;
-                    flex: 1 1 auto;
+                    //flex: 1 1 auto;
                 }
             }
 
